@@ -1,4 +1,5 @@
 Oct 22, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
+- add default custom args for StrikeForce & TacticalOps
 - use optimal width for arguments editor
 
 Oct 21, 2002: Alex Burger <alex@users.sourceforge dot net>
